Project

General

Profile

Actions

Bug #16766

closed

bluestore compilation warnings from BitAllocator.h

Added by Casey Bodley almost 8 years ago. Updated about 7 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
-
Category:
-
Target version:
-
% Done:

0%

Source:
other
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

Classes in BitAllocator.h have overloaded virtual functions, which have been producing these warnings for months. Please rename functions instead of overloading on arguments.

In file included from /home/cbodley/ceph/src/os/bluestore/BitAllocator.cc:22:0:
/home/cbodley/ceph/src/os/bluestore/BitAllocator.h:197:16: warning: ‘virtual bool BitMapArea::is_allocated(ExtentList*, int64_t, int)’ was hidden [-Woverloaded-vi
rtual]
   virtual bool is_allocated(ExtentList *blocks, int64_t num_blocks, int blk_off) {
                ^
/home/cbodley/ceph/src/os/bluestore/BitAllocator.h:325:8: warning:   by ‘virtual bool BitMapZone::is_allocated(int64_t, int64_t)’ [-Woverloaded-virtual]
   bool is_allocated(int64_t start_block, int64_t num_blocks);
        ^
/home/cbodley/ceph/src/os/bluestore/BitAllocator.h:242:19: warning: ‘virtual int64_t BitMapArea::alloc_blocks_dis(bool, int64_t, int64_t, ExtentList*)’ was hidde$
 [-Woverloaded-virtual]
   virtual int64_t alloc_blocks_dis(bool wait, int64_t num_blocks,
                   ^
/home/cbodley/ceph/src/os/bluestore/BitAllocator.h:367:11: warning:   by ‘BitMapZone::alloc_blocks_dis’ [-Woverloaded-virtual]
   int64_t alloc_blocks_dis(int64_t num_blocks,
           ^
/home/cbodley/ceph/src/os/bluestore/BitAllocator.h:197:16: warning: ‘virtual bool BitMapArea::is_allocated(ExtentList*, int64_t, int)’ was hidden [-Woverloaded-v$
rtual]
   virtual bool is_allocated(ExtentList *blocks, int64_t num_blocks, int blk_off) {
                ^
/home/cbodley/ceph/src/os/bluestore/BitAllocator.h:387:16: warning:   by ‘virtual bool BitMapAreaIN::is_allocated(int64_t, int64_t)’ [-Woverloaded-virtual]
   virtual bool is_allocated(int64_t start_block, int64_t num_blocks);
                ^
Actions #1

Updated by Sage Weil about 7 years ago

  • Status changed from New to Resolved
Actions

Also available in: Atom PDF