os/bluestore: remove cmake warning from extent alloc functions. tracker link: http://tracker.ceph.com/issues/16766 Signed-off-by: Ramesh Chander <Ramesh.Chander@sandisk.com>